[tool.poetry]
name = "polyga"
version = "1.0.0"
description = "Polymer Genetic Algorithm"
authors = ["Chiho Kim <chiho.kim@gatech.edu>", "Joseph Kern <jkern34@gatech.edu>"]
repository = "https://github.com/jdkern11/polyga.git"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.2.4"
scipy = "^1.7"
rdkit-pypi = "^2021.3.3"
pandas = "^1.1"
joblib = "^1.0.1"
click = "^8.0.1"
regex = "^2021.4.4"
tqdm = "^4.61.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
