[tool.poetry]
name = "polyga"
version = "1.0.12"
description = "Polymer Genetic Algorithm"
authors = ["Joseph Kern <jkern34@gatech.edu>", "Chiho Kim <chiho.kim@gatech.edu>"]
repository = "https://github.com/Ramprasad-Group/polyga.git"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.2.4"
scipy = "^1.7"
rdkit-pypi = "^2021.3.3"
pandas = "^1.1"
joblib = "^1.0.1"
SQLAlchemy = "^1.4.23"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.2"
notebook = "^6.4.5"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
